--- a/hack-nu/app/views/users/new.html.erb
+++ b/hack-nu/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row" style="margin-top:40px">
 
-<div class="col-xs-12 text-center">
+<div class="col-xs-12 text-center" style="">
 <h1 class="titulo-principal" style="text-align:center; font-size:2.8em; margin-top:40px; font-weight:bold; color:#d75c37">Vamos te ajudar a se planejar!</h1>
 
 <%= form_for(@user) do |f| %>
@@ -8,40 +8,62 @@
     <label for="disabledTextInput">Quanto você ganha por mês?</label>
     <%= f.text_field :monthly_income, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>
   </div>
-  <p>Se você quiser acelerar o processo e tornar tudo mais fácil, conecte a sua conta bancária:</p>
+  <p style="color:#d75c37; font-weight:bold; font-size:1em; width:90%; margin: 0 auto" >Se você quiser acelerar o processo e tornar tudo mais fácil, conecte a sua conta bancária:</p>
   <%= link_to 'Cadastrar Conta', add_credit_card_objective_path(Objective.last), class: 'btn btn-primary', style: "background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em"%>
-  <%= link_to 'Gostaria de cadastrar todos os meus gastos', new_account_datum_path, class: 'btn btn-primary', style: "background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em"%>
-  <h2> Ajude-nos a entender melhor o que você gosta de fazer. Enumere os itens de 1 à 10, sendo 1 o mais IMPORTANTE e 10 o menos RELEVANTE. Itens a baixo:</h2>
+  <%= link_to 'Cadastrar gastos manualmente', new_account_datum_path, class: 'btn btn-primary', style: "background-color:#678fa9; color:white; border:none; margin-top:20px; width:55%; padding:13px; font-weight:bold; font-size:1.2em"%>
+  <h2 style="color:#d75c37; margin: 0 auto; margin-top:40px; width:90%; font-size:1.5em; font-weight:bold"> Ajude-nos a entender melhor o que você gosta de fazer.</h2> 
+  <p style="color:#d75c37; margin: 0 auto; font-size:1em; width:70%">Enumere os itens abaixode 1 à 10, sendo 1 o mais IMPORTANTE e 10 o menos RELEVANTE;</p>
   <div class="container">
   <div class="row">
-    <div class="col-xs-1">
+    <div class="col-xs-12 text-center">
       <div class="form-group">
-        <label for="disabledTextInput">Compras</label>
-        <%= f.select :shop, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']],style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px" %>
-        <label for="disabledTextInput">Bares/Restaurantes</label>
-        <%= f.select :bar, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Presentes</label>
-        <%= f.select :gift, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Educação</label>
-        <%= f.select :education, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Saúde</label>
-        <%= f.select :health, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Serviços</label>
-        <%= f.select :services, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Transporte</label>
-        <%= f.select :transport, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Lazer</label>
-        <%= f.select :leisure, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Eletrônicos</label>
-        <%= f.select :electronics, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Viagem</label>
-        <%= f.select :travel, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
-        <label for="disabledTextInput">Vestuário</label>
-        <%= f.select :dressing, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Compras</label>
+          <%= f.select :shop, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']],style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px" %>
+        </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Bares/Restaurantes</label>
+          <%= f.select :bar, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Presentes</label>
+          <%= f.select :gift, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+          </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Educação</label>
+          <%= f.select :education, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+          </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Saúde</label>
+          <%= f.select :health, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+          </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Serviços</label>
+          <%= f.select :services, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Transporte</label>
+          <%= f.select :transport, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+          </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Lazer</label>
+          <%= f.select :leisure, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Eletrônicos</label>
+          <%= f.select :electronics, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Viagem</label>
+          <%= f.select :travel, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        </div>
+        <div>
+          <label style="font-size:1.2em; color:#678fa9" for="disabledTextInput">Vestuário</label>
+          <%= f.select :dressing, [['1','1'],['2','2'],['3','3'],['4','4'],['5','5'],['6','6'],['7','7'],['8','8'],['9','9'],['10','10'],['11','11']] %>
+        </div>
         <!--<%= f.text_field :dressing, style: "width:90%; margin: 0 auto; padding: 20px; margin-bottom:30px", class: "form-control" %>-->
       </div>
     </div>
     </div>
   </div>
-  <%= submit_tag 'Veja seu planejamento!', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:60%; padding:13px; font-weight:bold; font-size:1.2em" %>
+  <%= submit_tag 'Veja seu planejamento!', class: "btn btn-primary", style:"background-color:#678fa9; border:none; margin-top:60px; width:60%; padding:13px; font-weight:bold; font-size:1.2em; margin-bottom:40px" %>
 <% end%>
